# xycmd

./: .gitignore  LICENSE  README.md  example_config.toml  pyproject.toml
xycmd/: __main__.py  config.py
xycmd/services/jira_service/: models.py  service.py
